--- a/src/fixy_config/config/moveit_controllers.yaml
+++ b/src/fixy_config/config/moveit_controllers.yaml
@@ -1,4 +1,4 @@
-controller_manager:
+moveit_simple_controller_manager:
   ros__parameters:
     # MoveIt uses this configuration for controller management
     moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControllerManager
